@@ -2,14 +2,14 @@
 # note: may need to adjust if other research papers have different formats
 import xml.etree.ElementTree as ET
 import json
+from collections import OrderedDict
 ns = '{http://www.tei-c.org/ns/1.0}'  # xml namespace
 
 # get title and author from TEI/teiHeader/fileDesc/sourceDesc/biblStruct/analytic
-# title in <title>, authors each in <author>
 # input: <analytic> Element
-# output: metadata dict
-def metadata(analytic):
-    metadata = {}
+# output: metadata OrderedDict
+def get_metadata(analytic):
+    metadata = OrderedDict()
     # get title
     try:
         title = analytic.find(ns+'title').text
@@ -37,24 +37,39 @@ def metadata(analytic):
         authors = authors[:-2]  # remove ', ' from last author
     #print('authors are', authors)
     metadata['authors'] = authors
+    return metadata
 
-    json_str = json.dumps(metadata, indent=4)
-    print(json_str)
 
-    #this few lines do not seem to work, no data appearing in data.json
-    with open('data.json', 'w') as f:
-        f.write(json.dumps(metadata, indent=4))
+# get abstract from TEI/teiHeader/profileDesc/abstract
+# input: <abstract> Element
+# output: abstract OrderedDict(track 2)
+def get_abstract(abs_elem):
+    abs_track = OrderedDict()
+    abs_p = ""
+    for elem in abs_elem.iter():
+        tag = elem.tag
+        if tag == ns + 'ref' or tag == ns + 'p':
+            abs_p += elem.text + ' '
+            if elem.tail is not None:
+                abs_p += elem.tail + ' '
+        elif tag == ns + 'formula':
+            abs_p += '<math> '
+    if abs_p == "":
+        abs_p = "No abstract found"
+    else:
+        abs_p = abs_p[:-1]  # remove last space
+    abs_track["id"] = "abstract"
+    abs_track["content"] = abs_p
+    # print(abs_track)
+    return abs_track
 
-    #print(metadata)
-    return json_str
 
 # get each track from each div in TEI/text/body
-# each div has paragraphs in <p> and formulas in <formula>
 # input: <body> Element
-# output: tracks dict (does not include abstract yet)
-def tracks(body):
-    tracks = {}
-    tracknum = 1
+# output: tracks OrderedDict (first two tracks missing)
+def get_tracks(body):
+    tracks = OrderedDict()
+    tracknum = 3  # 1 should be "title and authors"; 2 should be "abstract"
 
     for div in body.iter(ns+'div'):
         content = ''
@@ -67,42 +82,52 @@ def tracks(body):
             sec_title = head.text
         except AttributeError:
             sec_title = 'No section title'
-        id = sec_num + sec_title
-        #print('id is', id)
-        for p in div.iter(ns+'p'):  # formulas ignored for now
-            content += p.text + ' '
+        my_id = sec_num + sec_title
+        #print('id is', my_id)
+        for elem in div.iter():  # should handle references and formulas
+            tag = elem.tag
+            if tag == ns + 'ref' or tag == ns + 'p':
+                content += elem.text + ' '
+                if elem.tail is not None:  # handles text after <ref>...</ref>
+                    content += elem.tail + ' '
+            elif tag == ns + 'formula':
+                content += '<math> '
         if content != '':
             content = content[:-1]  # take off last space
         #print('content is', content)
-        this_track = {}
-        this_track['id'] = id
+        this_track = OrderedDict()
+        this_track['id'] = my_id
         this_track['content'] = content
         tracks[str(tracknum)] = this_track
         tracknum += 1
-
-    #print(tracks)
-    json_str = json.dumps(tracks, indent=4, sort_keys = True, ensure_ascii=True)
-    '''
-    with open('data.json', 'w') as f:
-        f.write(json.dumps(tracks, sort_keys = True, ensure_ascii=True))
-    '''
-    print(json_str)
-    return json_str
+    return tracks
 
 
 def main():
-  tree = ET.parse('test1.pdf.tei.xml')
+  tree = ET.parse('/Users/sherrylin/130_Project/test/test1.pdf.tei.xml')
   root = tree.getroot()
-  #print(root.tag)
-  #print(root.find('body'))
-  #tracks(root.find('body'))
-  '''
-  output = {}
-  output['tracks']=tracks(root.find(ns+'text').find(ns+'body'))
-  output['metadata']=metadata(root.find(ns+'teiHeader').find(ns+'fileDesc').find(ns+'sourceDesc').find(ns+'biblStruct').find(ns+'analytic'))
-  '''
-  b =tracks(root.find(ns+'text').find(ns+'body'))
-  a =metadata(root.find(ns+'teiHeader').find(ns+'fileDesc').find(ns+'sourceDesc').find(ns+'biblStruct').find(ns+'analytic'))
+  output = OrderedDict()
+
+  metadata = get_metadata(root.find(ns+'teiHeader').find(ns+'fileDesc').find(ns+'sourceDesc').find(ns+'biblStruct').find(ns+'analytic'))
+  tracks = get_tracks(root.find(ns+'text').find(ns+'body'))
+
+  # add "title and authors", "abstract" sections to tracks OrderedDict
+  title_and_authors = OrderedDict()
+  title_and_authors['id'] = 'title and authors'
+  title_and_authors['content'] = metadata['title'] + ' by ' + metadata['authors']
+
+  tracks['1'] = title_and_authors
+  tracks['2'] = get_abstract(root.find(ns+'teiHeader').find(ns+'profileDesc').find(ns+'abstract'))
+  tracks.move_to_end('2', last=False)   # move tracks 1,2 to the beginning
+  tracks.move_to_end('1', last=False)
+  output['metadata'] = metadata
+  output['tracks'] = tracks
+
+  json_str = json.dumps(output, indent=2)
+  print(json_str)
+  with open('/Users/sherrylin/130_Project/test/data.json', 'w') as f:
+      f.write(json_str)
+      f.close()
 
   
 
